Fix user details button order & support identity maps